# binary-walkr

./: Cargo.toml  README.md
src/: dependencies.rs  main.rs  options.rs  resolve_symbols.rs  search_path.rs  summarize.rs  ui.rs
src/ui/: app.rs  crossterm.rs  draw.rs
