[package]
name = "binary-walkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.29.0"
anyhow = "^1"
thiserror = "^1"
clap = { version = "3.2.16", features = ["derive"] }
tui = "0.18.0"
tokio = { version = "^1.20", features = ["full"] }
